--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "LanceZhen\/weather",
+    "name": "lance\/weather",
     "description": "A weather SDK",
     "license": "MIT",
     "authors": [
